--- a/Assignment1/Assignment_1.ipynb
+++ b/Assignment1/Assignment_1.ipynb
@@ -20,7 +20,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**ASSIGNMENT-1**"
+        "**ASSIGNMENT-1** \n",
+        "**Balaji Ravi Kumar**"
       ],
       "metadata": {
         "id": "Lzik2LlBXMS4"
